# self-restart

./: Cargo.toml  README.md
src/: main.rs  run.rs  updated.rs
